--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -66,12 +66,15 @@ body {
 	border-radius:0;
 }
 
+.select--holder {
+  position: relative;
+}
 
 .select--holder::after {
 	content:"\25BE";
-	position:relative;
-	bottom:30px;
-	left:70%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 	pointer-events:none;
 }
 
