--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -64,6 +64,13 @@ body {
 	display: block;
 	width: 100%;
 	border-radius:0;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+}
+
+/* turning off native firefox validation */
+input:invalid, input:-moz-ui-valid {
+     box-shadow: none;     
 }
 
 
@@ -197,6 +204,10 @@ body {
   margin-top: 25px;
 }
 
+#birthdate, #mobile_number {
+  color:gray;
+}
+
 
 /* CHECKBOXES -- custom */
 
@@ -242,6 +253,19 @@ input[type=checkbox].css-checkbox {
 			content:" *";
 			}
 
+  /* firefox-specific styling */
+
+  @-moz-document url-prefix() { 
+      .grid > .grid__col--1-of-2#form--first--first {
+        width:49%;
+      }
+
+      select {
+        height:40.5px;
+      }
+  }
+
+  /* IE styles are done using separate stylesheet - 'ie.css' */
 /* responsive media queries */
 
     @media (max-width: 800px) {
