Adds a confirmation page. Two more detected cross-browser hiccups remain. First, hypens are allowed for the name on Firefox but not on Chrome. Second, checkboxes do not work on IE 8.

--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -208,6 +208,14 @@ input:invalid, input:-moz-ui-valid {
   color:gray;
 }
 
+/* view #2 -- confirmation page */
+.confirmation {
+  display:none;
+  padding:20px 15px 20px 15px;
+  margin-left:7%;
+  margin-right:7%;
+}
+
 
 /* CHECKBOXES -- custom */
 
