--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -18,6 +18,8 @@
 						<img src='{% static 'member_form/media/delta_dental_logo_updated.png' %}' class='container__header__logo'>
 					</div>
 
+					<div class='confirmation'></div>
+
 					<form class='container__form'>
 					{% csrf_token %}
 						<div class="grid">
