--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -20,6 +20,8 @@
 
 					<div class='confirmation'></div>
 
+					<div id="warning"></div>
+
 					<form class='container__form'>
 					{% csrf_token %}
 						<div class="grid">
