Adds Antonio's changes to .select--holder in style.css (now absolutely positioned). Timezone already changed to <select> from <input>.

--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -75,11 +75,11 @@ input:invalid, input:-moz-ui-valid, select:invalid, select:-moz-ui-valid {
 
 
 .select--holder::after {
-	content:"\25BE";
-	position:relative;
-	bottom:30px;
-	left:70%;
-	pointer-events:none;
+  content:"\25BE";
+  position:absolute;
+  top:32px;
+  right:10px;
+  pointer-events:none;
 }
 
 .container__form__input:focus {
